# MENTOR

./: .gitignore  AUTHORS  CHANGELOG.md  CITATION.cff  LICENSE  README.md  environment.yml  setup.cfg  setup.py
src/functional_partitioning/: __init__.py  _cluster.py  _datasets.py  _fancydend.py  _functional_partitioning.py  _metrics.py  _plot.py  _rwrtoolkit.py  _utils.py  _version.py  cli.py  cluster.py  datasets.py  dendrogram.R  fp_create_dendogram.R  functional_partitioning.py  heatmaps.R  metrics.py  rwrtoolkit.py  subclustered_dendrogram.R
src/mentor/: RWR_CV.R  __init__.py  _cluster.py  _datasets.py  _fancydend.py  _metrics.py  _plot.py  _rwrtoolkit.py  _utils.py  cli.py  create_dendogram.R  dendrogram.R  fp_create_dendogram.R  heatmaps.R  polar_dendrogram.R  run_cv.R  rwr_cv.R  rwr_utils.R  subclustered_dendrogram.R
tests/: test_basic.py  test_cli.py  test_clustering.py  test_plot.py  test_rwrtoolkit.py  test_sample_data.py  tests.py
