[metadata]
name = functional_partitioning
version = attr: functional_partitioning._version.__version__
author = J. I. Miller
author_email = millerji@ornl.gov
description = Functional partitioning.
url = https://github.com/izaakm/jail-functional-partitioning
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Bug Tracker = https://github.com/izaakm/jail-functional-partitioning/issues

[options]
package_dir =
     = src
packages = find:
python_requires = >=3.9
install_requires =
    dynamicTreeCut
    matplotlib
    numpy
    pandas
    scikit-learn >= 1.2
    scipy
    seaborn
    pytest

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    functional_partitioning = functional_partitioning.cli:main
