[metadata]
name = functional_partitioning
version = attr: functional_partitioning._version.__version__
author = J. I. Miller
author_email = millerji@ornl.gov
description = Functional partitioning.
url = https://github.com/izaakm/jail-functional-partitioning
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Bug Tracker = https://github.com/izaakm/jail-functional-partitioning/issues

[options]
scripts = 
    src/functional_partitioning/__init__.py
    src/functional_partitioning/_cluster.py
    src/functional_partitioning/_datasets.py
    src/functional_partitioning/_fancydend.py
    src/functional_partitioning/_metrics.py
    src/functional_partitioning/_plot.py
    src/functional_partitioning/_rwrtoolkit.py
    src/functional_partitioning/_utils.py
    src/functional_partitioning/_version.py
    src/functional_partitioning/cli.py
    src/functional_partitioning/dendrogram.R
    src/functional_partitioning/fp_create_dendogram.R
    src/functional_partitioning/heatmaps.R
    src/functional_partitioning/subclustered_dendrogram.R
package_dir =
     = src
packages = find:
python_requires = >=3.9
install_requires =
    dynamicTreeCut
    matplotlib
    numpy
    pandas
    scikit-learn >= 1.2
    scipy
    seaborn
    pytest
    r-tidyverse
    r-cowplot
    r-dendextend
    r-rcolorbrewer
    r-optparse
    r-ggnewscale
    r-latex2exp
include_package_data = True

[options.package_data]
    * = *.R

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    functional_partitioning = functional_partitioning.cli:main
