[metadata]
name = mentor
version = attr: mentor._version.__version__
author = J. I. Miller
author_email = millerji@ornl.gov
description = MENTOR
url = https://github.com/ayeTown/MENTOR
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Bug Tracker = https://github.com/ayeTown/MENTOR/issues

[options]
scripts = 
    src/mentor/__init__.py
    src/mentor/_cluster.py
    src/mentor/_datasets.py
    src/mentor/_fancydend.py
    src/mentor/_metrics.py
    src/mentor/_plot.py
    src/mentor/_rwrtoolkit.py
    src/mentor/_utils.py
    src/mentor/_version.py
    src/mentor/cli.py
    src/mentor/dendrogram.R
    src/mentor/fp_create_dendogram.R
    src/mentor/heatmaps.R
    src/mentor/subclustered_dendrogram.R
package_dir =
     = src
packages = find:
python_requires = >=3.9
install_requires =
    dynamicTreeCut
    numpy
    pandas
    scikit-learn >= 1.2
    scipy
    pytest
include_package_data = True

[options.package_data]
    * = *.R

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mentor = mentor.cli:main
